--- a/Prototype/src/pages/home/home.scss
+++ b/Prototype/src/pages/home/home.scss
@@ -1,3 +1,11 @@
 page-home {
 
+  .center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
 }
